--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: cheekujodhpur@gmail.com
 description: "The Official WnCC@IITB blog"
 baseurl: ""
 url: "http://wncc-iitb.com"
-twitter_username: 
+twitter_username: wncc_iitb
 github_username:  wncc
 facebook_username:  wncc.iitb
 
